tests/examples/snapshots/fail/sorts/proof_w_invariants.fly.cvc4.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/proof_w_invariants.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: expected bool but found s
   ┌─ tests/examples/fail/sorts/proof_w_invariants.fly:12:2
   │
12 │     invariant x
   │     ^^^^^^^^^^^


